--- a/SiriShortcustsDemo/Base.lproj/Main.storyboard
+++ b/SiriShortcustsDemo/Base.lproj/Main.storyboard
@@ -47,7 +47,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="156" height="165"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ik7-QT-i0a">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ik7-QT-i0a">
                                             <rect key="frame" x="0.0" y="0.0" width="156" height="165"/>
                                         </imageView>
                                     </subviews>
