--- a/SiriPhotoIntentUI/Base.lproj/MainInterface.storyboard
+++ b/SiriPhotoIntentUI/Base.lproj/MainInterface.storyboard
@@ -54,6 +54,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X47-rx-isc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="149" y="106"/>
         </scene>
     </scenes>
 </document>
